# nominaldelta

./: README.md  nominaldelta.py  pyproject.toml  test.py
.github/workflows/: main.yml
